--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.4.0",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-smooth-scroll": "^1.0.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
